// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F-UT-SNAPSHOT: Browse Practice Questions Snapshot Tests should match browse practice questions page snapshot (unauthenticated) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-indigo-50 via-white to-purple-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900"
>
  <div
    class="container mx-auto px-4 pt-24 pb-12"
  >
    <div
      class="text-center mb-20"
    >
      <div
        class="relative mb-8"
      >
        <div
          class="absolute inset-0 bg-gradient-to-r from-indigo-400 via-purple-500 to-pink-500 rounded-3xl blur-3xl opacity-30 scale-110"
        />
        <div
          class="relative w-28 h-28 bg-gradient-to-r from-indigo-500 via-purple-600 to-pink-500 rounded-3xl flex items-center justify-center mx-auto shadow-2xl"
        >
          <span>
            📖
          </span>
          <div
            class="absolute inset-0 rounded-3xl border-4 border-white/30 animate-spin"
            style="animation-duration: 8s;"
          />
        </div>
      </div>
      <h1
        class="text-6xl font-bold bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 bg-clip-text text-transparent mb-8"
      >
        Choose Your Learning Path
      </h1>
      <p
        class="text-2xl text-gray-600 dark:text-gray-400 max-w-5xl mx-auto leading-relaxed mb-12"
      >
        Select how you'd like to learn and improve your frontend development skills. Each option offers a unique experience tailored to different goals and skill levels.
      </p>
      <div
        class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-3xl mx-auto"
      >
        <div
          class="bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-3xl p-6 shadow-lg hover:shadow-xl transition-all duration-300"
        >
          <div
            class="text-3xl font-bold text-indigo-600 dark:text-indigo-400 mb-2"
          >
            750+
          </div>
          <div
            class="text-gray-600 dark:text-gray-400 font-medium"
          >
            Total Questions
          </div>
        </div>
        <div
          class="bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-3xl p-6 shadow-lg hover:shadow-xl transition-all duration-300"
        >
          <div
            class="text-3xl font-bold text-purple-600 dark:text-purple-400 mb-2"
          >
            3
          </div>
          <div
            class="text-gray-600 dark:text-gray-400 font-medium"
          >
            Learning Types
          </div>
        </div>
        <div
          class="bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-3xl p-6 shadow-lg hover:shadow-xl transition-all duration-300"
        >
          <div
            class="text-3xl font-bold text-pink-600 dark:text-pink-400 mb-2"
          >
            100%
          </div>
          <div
            class="text-gray-600 dark:text-gray-400 font-medium"
          >
            Free Access
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid lg:grid-cols-3 gap-6 max-w-5xl mx-auto mb-16"
    >
      <div
        class="group relative bg-white dark:bg-gray-800 rounded-3xl shadow-xl transition-all duration-500 overflow-hidden border border-gray-100 dark:border-gray-700 hover:shadow-2xl cursor-pointer hover:border-transparent hover:scale-105 ring-4 ring-blue-200 dark:ring-blue-800 scale-105 border-blue-300 dark:border-blue-600 bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20"
      >
        <div
          class="absolute inset-0 bg-gradient-to-br opacity-0 group-hover:opacity-5 transition-opacity duration-500 from-blue-500 to-blue-600"
        />
        <div
          class="relative p-8 text-center"
        >
          <div
            class="w-20 h-20 mx-auto mb-6 rounded-2xl flex items-center justify-center shadow-lg bg-gradient-to-br from-blue-100 to-blue-200 dark:from-blue-900/30 dark:to-blue-800/30 text-blue-600 dark:text-blue-400 group-hover:scale-110 group-hover:rotate-3 transition-all duration-300"
          >
            <span>
              👥
            </span>
          </div>
          <div
            class="flex items-center justify-center gap-2 mb-3 flex-wrap"
          >
            <h3
              class="text-2xl font-bold text-gray-900 dark:text-white group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Interview Questions
            </h3>
            <div
              class="flex items-center gap-1 px-3 py-1.5 bg-gradient-to-r from-blue-500 to-indigo-600 text-white rounded-full text-xs font-bold shadow-lg"
            >
              <span>
                ⭐
              </span>
              <span>
                Popular
              </span>
            </div>
          </div>
          <p
            class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
          >
            Master technical interviews with curated questions
          </p>
          <div
            class="text-center"
          >
            <button
              class="inline-flex items-center space-x-3 px-8 py-4 rounded-2xl font-semibold transition-all duration-300 shadow-lg hover:shadow-xl bg-gradient-to-r from-blue-600 to-blue-700 hover:from-blue-700 hover:to-blue-800 text-white group-hover:scale-105 group-hover:-translate-y-1"
            >
              <span>
                ▶️
              </span>
              <span>
                Get Started
              </span>
              <span>
                →
              </span>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 rounded-3xl border-2 border-transparent group-hover:border-current transition-all duration-300 group-hover:border-blue-300"
        />
      </div>
      <div
        class="group relative bg-white dark:bg-gray-800 rounded-3xl shadow-xl transition-all duration-500 overflow-hidden border border-gray-100 dark:border-gray-700 opacity-60 cursor-not-allowed "
      >
        <div
          class="absolute inset-0 bg-gradient-to-br opacity-0 group-hover:opacity-5 transition-opacity duration-500 from-purple-500 to-purple-600"
        />
        <div
          class="relative p-8 text-center"
        >
          <div
            class="w-20 h-20 mx-auto mb-6 rounded-2xl flex items-center justify-center shadow-lg bg-gradient-to-br from-purple-100 to-purple-200 dark:from-purple-900/30 dark:to-purple-800/30 text-purple-600 dark:text-purple-400 group-hover:scale-110 group-hover:rotate-3 transition-all duration-300"
          >
            <span>
              💻
            </span>
          </div>
          <div
            class="flex items-center justify-center gap-2 mb-3 flex-wrap"
          >
            <h3
              class="text-2xl font-bold text-gray-900 dark:text-white group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Frontend Tasks
            </h3>
            <div
              class="flex items-center gap-1 px-3 py-1.5 bg-gradient-to-r from-gray-400 to-gray-500 text-white rounded-full text-xs font-bold shadow-lg"
            >
              <span>
                ⏰
              </span>
              <span>
                Coming Soon
              </span>
            </div>
          </div>
          <p
            class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
          >
            Build real-world projects and components
          </p>
          <div
            class="text-center"
          >
            <button
              class="inline-flex items-center space-x-3 px-8 py-4 rounded-2xl font-semibold transition-all duration-300 shadow-lg bg-gray-400 dark:bg-gray-600 text-white cursor-not-allowed opacity-75"
              disabled=""
            >
              <span>
                ⏰
              </span>
              <span>
                Coming Soon
              </span>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 rounded-3xl border-2 border-transparent group-hover:border-current transition-all duration-300 group-hover:border-purple-300"
        />
      </div>
      <div
        class="group relative bg-white dark:bg-gray-800 rounded-3xl shadow-xl transition-all duration-500 overflow-hidden border border-gray-100 dark:border-gray-700 opacity-60 cursor-not-allowed "
      >
        <div
          class="absolute inset-0 bg-gradient-to-br opacity-0 group-hover:opacity-5 transition-opacity duration-500 from-green-500 to-green-600"
        />
        <div
          class="relative p-8 text-center"
        >
          <div
            class="w-20 h-20 mx-auto mb-6 rounded-2xl flex items-center justify-center shadow-lg bg-gradient-to-br from-green-100 to-green-200 dark:from-green-900/30 dark:to-green-800/30 text-green-600 dark:text-green-400 group-hover:scale-110 group-hover:rotate-3 transition-all duration-300"
          >
            <span>
              🧠
            </span>
          </div>
          <div
            class="flex items-center justify-center gap-2 mb-3 flex-wrap"
          >
            <h3
              class="text-2xl font-bold text-gray-900 dark:text-white group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Problem Solving
            </h3>
            <div
              class="flex items-center gap-1 px-3 py-1.5 bg-gradient-to-r from-gray-400 to-gray-500 text-white rounded-full text-xs font-bold shadow-lg"
            >
              <span>
                ⏰
              </span>
              <span>
                Coming Soon
              </span>
            </div>
          </div>
          <p
            class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
          >
            Solve algorithmic and logical problems
          </p>
          <div
            class="text-center"
          >
            <button
              class="inline-flex items-center space-x-3 px-8 py-4 rounded-2xl font-semibold transition-all duration-300 shadow-lg bg-gray-400 dark:bg-gray-600 text-white cursor-not-allowed opacity-75"
              disabled=""
            >
              <span>
                ⏰
              </span>
              <span>
                Coming Soon
              </span>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 rounded-3xl border-2 border-transparent group-hover:border-current transition-all duration-300 group-hover:border-green-300"
        />
      </div>
    </div>
    <div
      class="mb-16"
    >
      <div
        class="bg-gradient-to-r from-purple-600 via-indigo-600 to-blue-600 rounded-3xl shadow-2xl p-8 max-w-5xl mx-auto text-white relative overflow-hidden"
      >
        <div
          class="absolute inset-0 opacity-10"
        >
          <div
            class="absolute top-0 left-0 w-full h-full bg-gradient-to-br from-white/20 to-transparent"
          />
        </div>
        <div
          class="relative z-10"
        >
          <div
            class="text-center mb-8"
          >
            <div
              class="w-16 h-16 bg-white/20 rounded-2xl flex items-center justify-center mx-auto mb-4"
            >
              <span>
                🎯
              </span>
            </div>
            <h2
              class="text-3xl font-bold mb-4"
            >
              Want to Create Your Own Learning Path?
            </h2>
            <p
              class="text-purple-100 text-lg max-w-3xl mx-auto"
            >
              Build a completely customized learning plan tailored to your specific goals, schedule, and interests. Choose from all available sections and topics.
            </p>
          </div>
          <div
            class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-6"
          >
            <button
              class="inline-flex items-center space-x-3 px-8 py-4 bg-white text-purple-600 hover:bg-purple-50 font-semibold rounded-xl transition-all duration-300 shadow-lg hover:shadow-xl hover:scale-105"
            >
              <span>
                📖
              </span>
              <span>
                Create Custom Roadmap
              </span>
              <span>
                →
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mb-16"
    >
      <div
        class="bg-white dark:bg-gray-800 rounded-3xl shadow-xl p-8 max-w-5xl mx-auto"
      >
        <h2
          class="text-3xl font-bold text-gray-900 dark:text-white mb-6 text-center"
        >
          Not sure which to choose?
        </h2>
        <p
          class="text-gray-600 dark:text-gray-300 mb-8 text-center text-lg"
        >
          Each practice mode is designed for different learning goals. You can always switch between them or try multiple approaches to find what works best for you.
        </p>
        <div
          class="grid md:grid-cols-3 gap-8"
        >
          <div
            class="text-center p-6 bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20 rounded-2xl"
          >
            <div
              class="w-12 h-12 bg-blue-100 dark:bg-blue-900/30 rounded-xl flex items-center justify-center mx-auto mb-4"
            >
              <span>
                👥
              </span>
            </div>
            <h3
              class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
            >
              Interview Prep
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300"
            >
              Perfect if you're preparing for technical interviews or want to practice with real company questions.
            </p>
          </div>
          <div
            class="text-center p-6 bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 rounded-2xl"
          >
            <div
              class="w-12 h-12 bg-purple-100 dark:bg-purple-900/30 rounded-xl flex items-center justify-center mx-auto mb-4"
            >
              <span>
                💻
              </span>
            </div>
            <h3
              class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
            >
              Hands-on Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300"
            >
              Great for building practical skills, creating portfolio projects, and learning through real-world applications.
            </p>
          </div>
          <div
            class="text-center p-6 bg-gradient-to-br from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 rounded-2xl"
          >
            <div
              class="w-12 h-12 bg-green-100 dark:bg-green-900/30 rounded-xl flex items-center justify-center mx-auto mb-4"
            >
              <span>
                🧠
              </span>
            </div>
            <h3
              class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
            >
              Problem Solving
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300"
            >
              Ideal for improving logical thinking, algorithmic skills, and tackling complex programming challenges.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="text-center"
    >
      <button
        class="inline-flex items-center space-x-2 px-6 py-3 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white transition-colors bg-white dark:bg-gray-800 rounded-xl shadow-sm hover:shadow-md"
      >
        <span>
          →
        </span>
        <span>
          Go Back
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`F-UT-SNAPSHOT: Browse Practice Questions Snapshot Tests should match browse practice questions page snapshot 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-indigo-50 via-white to-purple-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900"
>
  <div
    class="container mx-auto px-4 pt-24 pb-12"
  >
    <div
      class="text-center mb-20"
    >
      <div
        class="relative mb-8"
      >
        <div
          class="absolute inset-0 bg-gradient-to-r from-indigo-400 via-purple-500 to-pink-500 rounded-3xl blur-3xl opacity-30 scale-110"
        />
        <div
          class="relative w-28 h-28 bg-gradient-to-r from-indigo-500 via-purple-600 to-pink-500 rounded-3xl flex items-center justify-center mx-auto shadow-2xl"
        >
          <span>
            📖
          </span>
          <div
            class="absolute inset-0 rounded-3xl border-4 border-white/30 animate-spin"
            style="animation-duration: 8s;"
          />
        </div>
      </div>
      <h1
        class="text-6xl font-bold bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 bg-clip-text text-transparent mb-8"
      >
        Choose Your Learning Path
      </h1>
      <p
        class="text-2xl text-gray-600 dark:text-gray-400 max-w-5xl mx-auto leading-relaxed mb-12"
      >
        Select how you'd like to learn and improve your frontend development skills. Each option offers a unique experience tailored to different goals and skill levels.
      </p>
      <div
        class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-3xl mx-auto"
      >
        <div
          class="bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-3xl p-6 shadow-lg hover:shadow-xl transition-all duration-300"
        >
          <div
            class="text-3xl font-bold text-indigo-600 dark:text-indigo-400 mb-2"
          >
            750+
          </div>
          <div
            class="text-gray-600 dark:text-gray-400 font-medium"
          >
            Total Questions
          </div>
        </div>
        <div
          class="bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-3xl p-6 shadow-lg hover:shadow-xl transition-all duration-300"
        >
          <div
            class="text-3xl font-bold text-purple-600 dark:text-purple-400 mb-2"
          >
            3
          </div>
          <div
            class="text-gray-600 dark:text-gray-400 font-medium"
          >
            Learning Types
          </div>
        </div>
        <div
          class="bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-3xl p-6 shadow-lg hover:shadow-xl transition-all duration-300"
        >
          <div
            class="text-3xl font-bold text-pink-600 dark:text-pink-400 mb-2"
          >
            100%
          </div>
          <div
            class="text-gray-600 dark:text-gray-400 font-medium"
          >
            Free Access
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid lg:grid-cols-3 gap-6 max-w-5xl mx-auto mb-16"
    >
      <div
        class="group relative bg-white dark:bg-gray-800 rounded-3xl shadow-xl transition-all duration-500 overflow-hidden border border-gray-100 dark:border-gray-700 hover:shadow-2xl cursor-pointer hover:border-transparent hover:scale-105 ring-4 ring-blue-200 dark:ring-blue-800 scale-105 border-blue-300 dark:border-blue-600 bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20"
      >
        <div
          class="absolute inset-0 bg-gradient-to-br opacity-0 group-hover:opacity-5 transition-opacity duration-500 from-blue-500 to-blue-600"
        />
        <div
          class="relative p-8 text-center"
        >
          <div
            class="w-20 h-20 mx-auto mb-6 rounded-2xl flex items-center justify-center shadow-lg bg-gradient-to-br from-blue-100 to-blue-200 dark:from-blue-900/30 dark:to-blue-800/30 text-blue-600 dark:text-blue-400 group-hover:scale-110 group-hover:rotate-3 transition-all duration-300"
          >
            <span>
              👥
            </span>
          </div>
          <div
            class="flex items-center justify-center gap-2 mb-3 flex-wrap"
          >
            <h3
              class="text-2xl font-bold text-gray-900 dark:text-white group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Interview Questions
            </h3>
            <div
              class="flex items-center gap-1 px-3 py-1.5 bg-gradient-to-r from-blue-500 to-indigo-600 text-white rounded-full text-xs font-bold shadow-lg"
            >
              <span>
                ⭐
              </span>
              <span>
                Popular
              </span>
            </div>
          </div>
          <p
            class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
          >
            Master technical interviews with curated questions
          </p>
          <div
            class="text-center"
          >
            <button
              class="inline-flex items-center space-x-3 px-8 py-4 rounded-2xl font-semibold transition-all duration-300 shadow-lg hover:shadow-xl bg-gradient-to-r from-blue-600 to-blue-700 hover:from-blue-700 hover:to-blue-800 text-white group-hover:scale-105 group-hover:-translate-y-1"
            >
              <span>
                ▶️
              </span>
              <span>
                Get Started
              </span>
              <span>
                →
              </span>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 rounded-3xl border-2 border-transparent group-hover:border-current transition-all duration-300 group-hover:border-blue-300"
        />
      </div>
      <div
        class="group relative bg-white dark:bg-gray-800 rounded-3xl shadow-xl transition-all duration-500 overflow-hidden border border-gray-100 dark:border-gray-700 opacity-60 cursor-not-allowed "
      >
        <div
          class="absolute inset-0 bg-gradient-to-br opacity-0 group-hover:opacity-5 transition-opacity duration-500 from-purple-500 to-purple-600"
        />
        <div
          class="relative p-8 text-center"
        >
          <div
            class="w-20 h-20 mx-auto mb-6 rounded-2xl flex items-center justify-center shadow-lg bg-gradient-to-br from-purple-100 to-purple-200 dark:from-purple-900/30 dark:to-purple-800/30 text-purple-600 dark:text-purple-400 group-hover:scale-110 group-hover:rotate-3 transition-all duration-300"
          >
            <span>
              💻
            </span>
          </div>
          <div
            class="flex items-center justify-center gap-2 mb-3 flex-wrap"
          >
            <h3
              class="text-2xl font-bold text-gray-900 dark:text-white group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Frontend Tasks
            </h3>
            <div
              class="flex items-center gap-1 px-3 py-1.5 bg-gradient-to-r from-gray-400 to-gray-500 text-white rounded-full text-xs font-bold shadow-lg"
            >
              <span>
                ⏰
              </span>
              <span>
                Coming Soon
              </span>
            </div>
          </div>
          <p
            class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
          >
            Build real-world projects and components
          </p>
          <div
            class="text-center"
          >
            <button
              class="inline-flex items-center space-x-3 px-8 py-4 rounded-2xl font-semibold transition-all duration-300 shadow-lg bg-gray-400 dark:bg-gray-600 text-white cursor-not-allowed opacity-75"
              disabled=""
            >
              <span>
                ⏰
              </span>
              <span>
                Coming Soon
              </span>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 rounded-3xl border-2 border-transparent group-hover:border-current transition-all duration-300 group-hover:border-purple-300"
        />
      </div>
      <div
        class="group relative bg-white dark:bg-gray-800 rounded-3xl shadow-xl transition-all duration-500 overflow-hidden border border-gray-100 dark:border-gray-700 opacity-60 cursor-not-allowed "
      >
        <div
          class="absolute inset-0 bg-gradient-to-br opacity-0 group-hover:opacity-5 transition-opacity duration-500 from-green-500 to-green-600"
        />
        <div
          class="relative p-8 text-center"
        >
          <div
            class="w-20 h-20 mx-auto mb-6 rounded-2xl flex items-center justify-center shadow-lg bg-gradient-to-br from-green-100 to-green-200 dark:from-green-900/30 dark:to-green-800/30 text-green-600 dark:text-green-400 group-hover:scale-110 group-hover:rotate-3 transition-all duration-300"
          >
            <span>
              🧠
            </span>
          </div>
          <div
            class="flex items-center justify-center gap-2 mb-3 flex-wrap"
          >
            <h3
              class="text-2xl font-bold text-gray-900 dark:text-white group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Problem Solving
            </h3>
            <div
              class="flex items-center gap-1 px-3 py-1.5 bg-gradient-to-r from-gray-400 to-gray-500 text-white rounded-full text-xs font-bold shadow-lg"
            >
              <span>
                ⏰
              </span>
              <span>
                Coming Soon
              </span>
            </div>
          </div>
          <p
            class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
          >
            Solve algorithmic and logical problems
          </p>
          <div
            class="text-center"
          >
            <button
              class="inline-flex items-center space-x-3 px-8 py-4 rounded-2xl font-semibold transition-all duration-300 shadow-lg bg-gray-400 dark:bg-gray-600 text-white cursor-not-allowed opacity-75"
              disabled=""
            >
              <span>
                ⏰
              </span>
              <span>
                Coming Soon
              </span>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 rounded-3xl border-2 border-transparent group-hover:border-current transition-all duration-300 group-hover:border-green-300"
        />
      </div>
    </div>
    <div
      class="mb-16"
    >
      <div
        class="bg-gradient-to-r from-purple-600 via-indigo-600 to-blue-600 rounded-3xl shadow-2xl p-8 max-w-5xl mx-auto text-white relative overflow-hidden"
      >
        <div
          class="absolute inset-0 opacity-10"
        >
          <div
            class="absolute top-0 left-0 w-full h-full bg-gradient-to-br from-white/20 to-transparent"
          />
        </div>
        <div
          class="relative z-10"
        >
          <div
            class="text-center mb-8"
          >
            <div
              class="w-16 h-16 bg-white/20 rounded-2xl flex items-center justify-center mx-auto mb-4"
            >
              <span>
                🎯
              </span>
            </div>
            <h2
              class="text-3xl font-bold mb-4"
            >
              Want to Create Your Own Learning Path?
            </h2>
            <p
              class="text-purple-100 text-lg max-w-3xl mx-auto"
            >
              Build a completely customized learning plan tailored to your specific goals, schedule, and interests. Choose from all available sections and topics.
            </p>
          </div>
          <div
            class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-6"
          >
            <button
              class="inline-flex items-center space-x-3 px-8 py-4 bg-white text-purple-600 hover:bg-purple-50 font-semibold rounded-xl transition-all duration-300 shadow-lg hover:shadow-xl hover:scale-105"
            >
              <span>
                📖
              </span>
              <span>
                Create Custom Roadmap
              </span>
              <span>
                →
              </span>
            </button>
            <button
              class="inline-flex items-center space-x-3 px-8 py-4 bg-purple-500 hover:bg-purple-400 text-white font-semibold rounded-xl transition-all duration-300 shadow-lg hover:shadow-xl hover:scale-105"
            >
              <span>
                👁️
              </span>
              <span>
                View My Plans
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mb-16"
    >
      <div
        class="bg-white dark:bg-gray-800 rounded-3xl shadow-xl p-8 max-w-5xl mx-auto"
      >
        <h2
          class="text-3xl font-bold text-gray-900 dark:text-white mb-6 text-center"
        >
          Not sure which to choose?
        </h2>
        <p
          class="text-gray-600 dark:text-gray-300 mb-8 text-center text-lg"
        >
          Each practice mode is designed for different learning goals. You can always switch between them or try multiple approaches to find what works best for you.
        </p>
        <div
          class="grid md:grid-cols-3 gap-8"
        >
          <div
            class="text-center p-6 bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20 rounded-2xl"
          >
            <div
              class="w-12 h-12 bg-blue-100 dark:bg-blue-900/30 rounded-xl flex items-center justify-center mx-auto mb-4"
            >
              <span>
                👥
              </span>
            </div>
            <h3
              class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
            >
              Interview Prep
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300"
            >
              Perfect if you're preparing for technical interviews or want to practice with real company questions.
            </p>
          </div>
          <div
            class="text-center p-6 bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 rounded-2xl"
          >
            <div
              class="w-12 h-12 bg-purple-100 dark:bg-purple-900/30 rounded-xl flex items-center justify-center mx-auto mb-4"
            >
              <span>
                💻
              </span>
            </div>
            <h3
              class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
            >
              Hands-on Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300"
            >
              Great for building practical skills, creating portfolio projects, and learning through real-world applications.
            </p>
          </div>
          <div
            class="text-center p-6 bg-gradient-to-br from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 rounded-2xl"
          >
            <div
              class="w-12 h-12 bg-green-100 dark:bg-green-900/30 rounded-xl flex items-center justify-center mx-auto mb-4"
            >
              <span>
                🧠
              </span>
            </div>
            <h3
              class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
            >
              Problem Solving
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300"
            >
              Ideal for improving logical thinking, algorithmic skills, and tackling complex programming challenges.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="text-center"
    >
      <button
        class="inline-flex items-center space-x-2 px-6 py-3 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white transition-colors bg-white dark:bg-gray-800 rounded-xl shadow-sm hover:shadow-md"
      >
        <span>
          →
        </span>
        <span>
          Go Back
        </span>
      </button>
    </div>
  </div>
</div>
`;
